--- a/app_ui/app/index.html
+++ b/app_ui/app/index.html
@@ -10,8 +10,8 @@
     <base href="/">
 
     <!-- App Styles -->
-    <link href="bower_components/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link href="/bower_components/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
     <style>
 
       body {
@@ -78,7 +78,7 @@
 
 
     </style>
-    <link href="bower_components/bootstrap/docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/bower_components/bootstrap/docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
 
     <style>
 
@@ -252,11 +252,11 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="bower_components/bootstrap/docs/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="bower_components/bootstrap/docs/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="bower_components/bootstrap/docs/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="bower_components/bootstrap/docs/assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="bower_components/bootstrap/docs/assets/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/bower_components/bootstrap/docs/assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/bower_components/bootstrap/docs/assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/bower_components/bootstrap/docs/assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/bower_components/bootstrap/docs/assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="/bower_components/bootstrap/docs/assets/ico/favicon.png">
   </head>
 
   <body ng-app="OAuth2UI">
@@ -278,23 +278,23 @@
 
 
     <!-- App Dependencies -->
-    <script src="bower_components/angular-unstable/angular.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
-    <script src="bower_components/angular-md5/angular-md5.js"></script>
+    <script src="/bower_components/angular-unstable/angular.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="/bower_components/angular-md5/angular-md5.js"></script>
 
     <!-- build:js scripts/application.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/account.js"></script>
-    <script src="scripts/controllers/apps.js"></script>
-    <script src="scripts/controllers/authorize.js"></script>
-    <script src="scripts/controllers/signin.js"></script>
-    <script src="scripts/controllers/signup.js"></script>
-    <script src="scripts/services/Flow.js"></script>
-    <script src="scripts/services/User.js"></script>
-    <script src="scripts/filters/form.js"></script>
-    <script src="scripts/interceptors/authentication.js"></script>
-    <script src="scripts/directives/userMenu.js"></script>
-    <script src="scripts/directives/formFix.js"></script>
+    <script src="/scripts/app.js"></script>
+    <script src="/scripts/controllers/account.js"></script>
+    <script src="/scripts/controllers/apps.js"></script>
+    <script src="/scripts/controllers/authorize.js"></script>
+    <script src="/scripts/controllers/signin.js"></script>
+    <script src="/scripts/controllers/signup.js"></script>
+    <script src="/scripts/services/Flow.js"></script>
+    <script src="/scripts/services/User.js"></script>
+    <script src="/scripts/filters/form.js"></script>
+    <script src="/scripts/interceptors/authentication.js"></script>
+    <script src=/"scripts/directives/userMenu.js"></script>
+    <script src="/scripts/directives/formFix.js"></script>
     <!-- endbuild -->
 
   </body>
