--- a/app_ui/app/index.html
+++ b/app_ui/app/index.html
@@ -293,7 +293,7 @@
     <script src="/scripts/services/User.js"></script>
     <script src="/scripts/filters/form.js"></script>
     <script src="/scripts/interceptors/authentication.js"></script>
-    <script src=/"scripts/directives/userMenu.js"></script>
+    <script src="/scripts/directives/userMenu.js"></script>
     <script src="/scripts/directives/formFix.js"></script>
     <!-- endbuild -->
 
